--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ footer{
 }
 
 
-@media screen and (min-width:350px){
+@media screen and (max-width:380px){
     .l{
         display: none;
         /* position: absolute; */
